continue report, add speedup graph

--- a/Assignement 1/a1_270955_260589.md
+++ b/Assignement 1/a1_270955_260589.md
@@ -17,4 +17,16 @@ The parallel phase is the calculus phase and look like this :
         }
     }
 For each samples needed, we generate two random numbers, representing the X and Y coordinates of a points. If the distance between the point and the origin is less than 1, it is in the circle, and need to be added to nb_points. It has to be done in an atomic manner, to avoid wrong updates of the value.  
-As every iteration of the loop is independent, it is possible to run it in a parallel manner.
+As every iteration of the loop is independent, it is possible to run it in a parallel manner. The dominant operation is the distance calculus, and it runs overall in O(samples).  
+
+##integral.c
+###Algorithm analysis
+
+The algorithm is very similar to _pi.c_, so it will not be detailed.  
+The initialisation part run in constant time (O(1)), and the calculus part runs in O(samples).  
+
+
+##Parallelism 
+Roughly, 95% of each programm can be parallel, so a significant speedup is expected. Here is the graph of the expected speedup for 1, 2, 4, 8, 16, 32 and 64 cores.  
+
+![Graph](Speedup.jpg)
