--- a/Assignement 1/a1_270955_260589.md
+++ b/Assignement 1/a1_270955_260589.md
@@ -1,12 +1,13 @@
-#Report
+# Report
 
-##pi.c
-###Algorithm analysis
+## pi.c
+### Algorithm analysis
 The algorithm runs in two main phases, one is serial and the other one is parallel.  
-The serial part is initialisation. It consists of setting the number of threads wanted, creating a random number generator, and preparing a variable for the points that will land inside the circle. This part is executed once, and run therefore in O(1).
+The serial part is initialisation. It consists of setting the number of threads wanted, creating a random number generator, and preparing a variable for counting the points that will land inside the circle. This part is executed once, and run therefore in O(1).
 
 The parallel phase is the calculus phase and look like this :  
 
+```C
     #pragma omp parallel for
     for (size_t i = 0; i < samples; ++i) {
         double x = next_rand(rand);
@@ -16,17 +17,18 @@ The parallel phase is the calculus phase and look like this :
             nb_points += 1;
         }
     }
-For each samples needed, we generate two random numbers, representing the X and Y coordinates of a points. If the distance between the point and the origin is less than 1, it is in the circle, and need to be added to nb_points. It has to be done in an atomic manner, to avoid wrong updates of the value.  
-As every iteration of the loop is independent, it is possible to run it in a parallel manner. The dominant operation is the distance calculus, and it runs overall in O(samples).  
+```
+For each samples needed, we generate two random numbers, representing the X and Y coordinates of a points. If the distance between the point and the origin is less than 1, it is in the circle, and need to be added to nb_points. It has to be done in an atomic manner, to be sure that the value is indeed the number of points (avoid that two threads change it at the same time and loose the right value).  
+As every iteration of the loop is independent, it is possible to run it in a parallel manner. The dominant operation is the distance computation, and it runs overall in O(samples).  
 
-##integral.c
-###Algorithm analysis
+## integral.c
+### Algorithm analysis
 
 The algorithm is very similar to _pi.c_, so it will not be detailed.  
 The initialisation part run in constant time (O(1)), and the calculus part runs in O(samples).  
 
 
-##Parallelism 
+## Parallelism 
 Roughly, 95% of each programm can be parallel, so a significant speedup is expected. Here is the graph of the expected speedup for 1, 2, 4, 8, 16, 32 and 64 cores.  
 
 ![Graph](Speedup.jpg)
