Code for Pi is optimized, and report changed accordingly

--- a/Assignement 1/a1_270955_260589.md
+++ b/Assignement 1/a1_270955_260589.md
@@ -11,12 +11,11 @@ The parallel phase is the calculus phase and look like this :
     for (size_t i = 0; i < samples; ++i) {
         double x = next_rand(rand);
         double y = next_rand(rand);
-        if (x*x + y*y <= 1){
-            #pragma omp atomic
-            nb_points += 1;
+        if (x*x + y*y < 1){
+            result[omp_get_thread_num()] += 1;
         }
     }
-For each samples needed, we generate two random numbers, representing the X and Y coordinates of a points. If the distance between the point and the origin is less than 1, it is in the circle, and need to be added to nb_points. It has to be done in an atomic manner, to avoid wrong updates of the value.  
+For each samples needed, we generate two random numbers, representing the X and Y coordinates of a points. If the distance between the point and the origin is less than 1, it is in the circle, and need to be added to result.  
 As every iteration of the loop is independent, it is possible to run it in a parallel manner. The dominant operation is the distance calculus, and it runs overall in O(samples).  
 
 ##integral.c
