Changes in the rapport to match changes in the code

--- a/Assignement 1/a1_270955_260589.md
+++ b/Assignement 1/a1_270955_260589.md
@@ -3,7 +3,7 @@
 ## pi.c
 ### Algorithm analysis
 The algorithm runs in two main phases, one is serial and the other one is parallel.  
-The serial part is initialisation. It consists of setting the number of threads wanted, creating a random number generator, and preparing a variable for counting the points that will land inside the circle. This part is executed once, and run therefore in O(1).
+The serial part is initialisation. It consists of setting the number of threads wanted, creating one random number generator per thread and put them in an array, and declaring and initializing an array of variables for counting the points that will land inside the circle (one per thread). This part is executed once, and run therefore in O(1).
 
 The parallel phase is the calculus phase and look like this :  
 
@@ -17,7 +17,7 @@ The parallel phase is the calculus phase and look like this :
         }
     }
 ```
-For each samples needed, we generate two random numbers, representing the X and Y coordinates of a points. If the distance between the point and the origin is less than 1, it is in the circle, and need to be added to nb_points. It has to be done in an atomic manner, to be sure that the value is indeed the number of points (avoid that two threads change it at the same time and loose the right value).  
+For each samples needed, we generate two random numbers, representing the X and Y coordinates of a points. If the distance between the point and the origin is less than 1, it is in the circle, and need to be added to result[omp_get_thread_num()]. Because each thread has its own variable in the array, there is no need to add an atomic condition.  
 As every iteration of the loop is independent, it is possible to run it in a parallel manner. The dominant operation is the distance computation, and it runs overall in O(samples).  
 
 ## integral.c
