add the effective speedup graph and the md

--- a/Assignement 1/a1_270955_260589.md
+++ b/Assignement 1/a1_270955_260589.md
@@ -31,3 +31,7 @@ The initialisation part run in constant time (O(1)), and the calculus part runs 
 Roughly, 95% of each programm can be parallel, so a significant speedup is expected. Here is the graph of the expected speedup for 1, 2, 4, 8, 16, 32 and 64 cores.  
 
 ![Graph](Speedup.jpg)
+
+Here is the effective speed up we obtain after running our code on the cluster with 1, 2, 4, 8 and 16 threads. For each number of thread we ran the program 100 times.
+
+![Graph](Effective-speedup.jpg)
