--- a/Assignement 1/a1_270955_260589.md
+++ b/Assignement 1/a1_270955_260589.md
@@ -28,10 +28,11 @@ The initialisation part run in constant time (O(1)), and the calculus part runs 
 
 
 ## Parallelism 
-Roughly, 95% of each programm can be parallel, so a significant speedup is expected. Here is the graph of the expected speedup for 1, 2, 4, 8, 16, 32 and 64 cores.  
+Roughly, 99% of each programm can be parallel, so a significant speedup is expected. Blue points on the graph represents the expected speedup for 1, 2, 4, 8, 16, 32 and 64 cores.  
 
-![Graph](Speedup.jpg)
+We ran our code on the cluster a hundred times for each configuration with 1, 2, 4, 8 and 16 threads. Red points represents the average speedup we computed.
 
-Here is the effective speed up we obtain after running our code on the cluster with 1, 2, 4, 8 and 16 threads. For each number of thread we ran the program 100 times.
+![Graph](Effective-speedup.png)
 
-![Graph](Effective-speedup.jpg)
+## Performance analysis
+The effective sppedup matches pretty well the expected speed up. The only exception is when the machines uses 8 threads to run the code. We did more tests, but the results were still the same. One explanation can be that it takes some time to add the results of each thread, and therefore the speedup ratio is not growing as fast as expected.
