ready to submit with pdf

--- a/Assignement 1/a1_270955_260589.md
+++ b/Assignement 1/a1_270955_260589.md
@@ -35,4 +35,4 @@ We ran our code on the cluster a hundred times for each configuration with 1, 2,
 ![Graph](Effective-speedup.png)
 
 ## Performance analysis
-The effective sppedup matches pretty well the expected speed up. The only exception is when the machines uses 8 threads to run the code. We did more tests, but the results were still the same. One explanation can be that it takes some time to add the results of each thread, and therefore the speedup ratio is not growing as fast as expected.
+The effective sppedup matches pretty well the expected speed up. The only exception is when the machines uses 8 threads to run the code. We did more tests, but the results were still the same. One explanation can be that it takes some time to add the results of each thread, and therefore the speedup ratio is not growing as fast as expected. Another explanation could be a proximity in memory that make the caches looses some time to keep coherence.
