add the integral graph in md

--- a/Assignement 1/a1_St270955_St260589.md
+++ b/Assignement 1/a1_St270955_St260589.md
@@ -30,9 +30,19 @@ The initialisation part run in constant time (O(1)), and the calculus part runs 
 ## Parallelism 
 Roughly, 99% of each programm can be parallel, so a significant speedup is expected. Blue points on the graph represents the expected speedup for 1, 2, 4, 8, 16, 32 and 64 cores.  
 
+### Pi performance
 We ran our code on the cluster a hundred times for each configuration with 1, 2, 4, 8 and 16 threads. Red points represents the average speedup we computed.
 
-![Graph](Effective-speedup.png)
+<img src = "Effective-speedup_pi.png" width="500">
+
+### Integral performance
+Same protocol for the integral program.
+
+<img src = "Effective-speedup_integral.png" width="500">
 
 ## Performance analysis
+### Pi
 The effective speedup matches pretty well the expected speed up. The only exception is when the machines uses 8 threads to run the code. We did more tests, but the results were still the same. One explanation can be that it takes some time to add the results of each thread, and therefore the speedup ratio is not growing as fast as expected. Another explanation could be a proximity in memory that make the caches looses some time to keep coherence.
+
+### Integral
+The effective speedup matches almost perfectly the expected one.
