correct a typo in report

--- a/Assignement 2/a2_37.md
+++ b/Assignement 2/a2_37.md
@@ -14,4 +14,4 @@ First we put the two *for loop* in parallel section. Then we add a padding to re
 #define PINPUT(I,J) pInput[4*((I)*length+(J))]
 #define POUTPUT(I,J) pOutput[4*((I)*length+(J))]
 ``` 
-At the end we write what is inside *pOutput* in the *Output* array and at this moment, we write the value in 4 different places to populate the whole array using the symmetrical propterty.
+At the end we write what is inside *pOutput* in the *Output* array and at this moment, we write the value in 4 different places to populate the whole array using the symmetrical property.
