--- a/Assignement 2/a2_37.md
+++ b/Assignement 2/a2_37.md
@@ -2,16 +2,15 @@
 
 ## Optimizations
 ### Algorithm optimization
-First of all, we observed that the grid can be cut into 4 symetrical parts like this :
+First of all, we observed that the grid can be cut into 8 symetrical parts like this :
 
-*Here insert the image* 
+<img src="schema.jpg" width=350>
 
-The four parts are symetrical so we can compute for only one of them and then just populate the other with the same value but with a axial symetry. This leads to a gain in performance by a factor of 4. To do so we go through the array only to length/2-1 for height and width. 
+The 8 parts are symetrical so we can compute for only one of them (the blue one on the) and then just populate the other with the same value but with a axial symetry. This leads to a gain in performance by a factor of 8. The only critical parts are when we compute the cells that are at the border. When we need a cell that is in a part that we do not compute, we just use its symetrical sister that is in the region. 
 
 ### Parallelization
-First we put the two *for loop* in parallel section. Then we add a padding to reduce the amount of false sharing. Since we only compute value for the quarter of the grid, we need less space in the arrays. We chose to add 3 empty spaces of the *sizeof(double)* between each value. This gives array of the size *length\*length\*4/4=length\*length*. *length\*length* is the size of the initial array so we multiplie it by 4 to have space for 4 times more double but we divide it by 4 because we only use the first quarter. We also rewrite macros to write in these new arrays :
-```c
-#define PINPUT(I,J) pInput[4*((I)*length+(J))]
-#define POUTPUT(I,J) pOutput[4*((I)*length+(J))]
-``` 
-At the end we write what is inside *pOutput* in the *Output* array and at this moment, we write the value in 4 different places to populate the whole array using the symmetrical property.
+First we put the two *for loop* in parallel section and the outer *for loop* in a *#pragma omp for parallel*. Then we try to add a padding to reduce the amount of false sharing. But it augments the execution time. To do the padding we had to copy both *input* and *output* arrays in two new arrays and add some empty spaces between each double. We allocate 8 times more space that the initial grid but only for the first quarter (because we only use this part during computation). This leads to an array size of : *(length/2)\*(length/2)\*8*. And access like this : *pOutput[8\*index]*.
+
+But the problem is that we can't pad the arrays we receive so we need to work on others. And doing this we have to copy the array we used to compute in the ouput array we received as argument. This copy costs more than the cache misses we don't have anymore with this solution. Our program runs 3x slower when we use the padding.
+
+Seeing that we decided to remove the padding because we are looking for the best performance.
