add execution times table

--- a/Assignement 2/a2_37.md
+++ b/Assignement 2/a2_37.md
@@ -14,3 +14,13 @@ First we put the two *for loop* in parallel section and the outer *for loop* in 
 But the problem is that we can't pad the arrays we receive so we need to work on others. And doing this we have to copy the array we used to compute in the ouput array we received as argument. This copy costs more than the cache misses we don't have anymore with this solution. Our program runs 3x slower when we use the padding.
 
 Seeing that we decided to remove the padding because we are looking for the best performance.
+
+## Performance
+Here are the execution time we obtain.
+
+Execution times are shown for 1, 2, 4, 8, 16 threads in seconds for the naive algorithm (what was given to us) and our program run for 10'000x10'000 array and for 100 iterations.
+
+|  | 1 thread | 2 threads | 4 threads | 8 threads | 16 threads |
+|---|---|---|---|---|---|
+| Naive| 25.08 | | | | |
+| Our version | 6.412 | 4.948 | 2.951 | 1.623 | 1.057 |
