--- a/Assignement 2/a2_37.md
+++ b/Assignement 2/a2_37.md
@@ -6,7 +6,9 @@ First of all, we observed that the grid can be cut into 8 symetrical parts like 
 
 <img src="schema.jpg" width=350>
 
-The 8 parts are symetrical so we can compute for only one of them (the blue one on the) and then just populate the other with the same value but with a axial symetry. This leads to a gain in performance by a factor of  more or less 8 due to loss of time when copying all values in the rest of the grid. The only critical parts are when we compute the cells that are at the border. When we need a cell that is in a part that we do not compute, we just use its symetrical sister that is in the computed region. 
+The 8 parts are symetrical so we can compute for only one of them (the blue one on the) and then just populate the other with the same value but with a axial symetry. This leads to a gain in performance by a factor of  more or less 8 due to loss of time when copying all values in the rest of the grid. The only critical parts are when we compute the cells that are at the border. When we need a cell that is in a part that we do not compute, we just use its symetrical sister that is in the computed region.
+
+We did another observation: the central part that is not at temperature 0 grows with the number of iterations and eventually reachs the border. We can then compute only a reduced part of the matrix and grow this part at each iteration. This reduces significantly the execution time.
 
 ### Parallelization
 First we put the two *for loop* in parallel section and the outer *for loop* in a *#pragma omp for parallel*. Then we tried to add a padding to reduce the amount of false sharing, but it augmented the execution time. To achieve the padding, we had to copy both *input* and *output* arrays in two new arrays and add some empty spaces between each double. We allocated 8 times more space that the initial grid but only for the first quarter (because we only use this part during computation). This led to an array size of : *(length/2)\*(length/2)\*8*, and access of the form : *pOutput[8\*index]*.
@@ -23,4 +25,4 @@ Execution times are shown for 1, 2, 4, 8, 16 threads in seconds for the naive al
 |  | 1 thread | 2 threads | 4 threads | 8 threads | 16 threads |
 |---|---|---|---|---|---|
 | Naive| 25.08 | | | | |
-| Our version | 6.412 | 4.948 | 2.951 | 1.623 | 1.057 |
+| Our version | 1.051 | 0.8028 | 0.4735 | 0.2643 | 0.2104 |
