--- a/Assignement 3/a3_37.md
+++ b/Assignement 3/a3_37.md
@@ -52,3 +52,47 @@ Because **P1** wasn't aware that node(7) was deleted, it couldn't create the rig
 ###Search operations
 
 As the search operations doens't modify anything in the list, no races can occur. As operations in two threads don't have any happens-before relationship, the behavior of search during an addition or a deletion is undefined. There is no way to ensure that the added/deleted element will be included/excluded from the search.
+
+##Single lock
+To simplify and shorten the code snippet, only relevant parts are mentioned. Comments indicate where code lines were omitted.
+
+```C
+omp_lock_t lock;
+omp_init_lock(&lock);
+
+int insert(node_t* head, int val) {
+	omp_set_lock(&lock);
+	//omitted code
+
+	if (current && current->val == val) {
+		omp_unset_lock(&lock);
+        return -1;
+    }
+    
+    //omitted code
+    omp_unset_lock(&lock);
+    return 0;
+} 
+
+int delete(node_t* head, int val) {
+	omp_set_lock(&lock);
+   	node_t *previous, *current;
+	if (head->next == NULL) {
+		omp_unset_lock(&lock);
+      	return -1;
+    }
+	
+	//omitted code
+	if (current->val == val) {
+		//omitted code
+		omp_unset_lock(&lock);
+		return val;
+	}
+	
+	//omitted code
+   
+   omp_unset_lock(&lock); 
+	return -1;
+
+}
+```
