--- a/Assignement 3/a3_37.md
+++ b/Assignement 3/a3_37.md
@@ -96,3 +96,7 @@ int delete(node_t* head, int val) {
 
 }
 ```
+
+##Performance bottleneck
+
+With a single lock, every operation on the list is done in a sequenstial way, and thus the benefits of parallelism is lost, even though we could add elements in two different places without introducing races.
