answer question 4 and 5 by implementing item lock on list

--- a/Assignement 3/a3_37.md
+++ b/Assignement 3/a3_37.md
@@ -97,6 +97,88 @@ int delete(node_t* head, int val) {
 }
 ```
 
-## Performance bottleneck
+## Performance bottleneck of single lock
 
 With a single lock, every operation on the list is done in a sequenstial way, and thus the benefits of parallelism is lost, even though we could add elements in two different places without introducing races.
+
+## Item lock
+A list item now contains a lock, which is initialized when the node is created.
+During the search, a thread maintains two locks, one on *previous* and one on *current*. If it is not the right place to insert or delete, the lock of *previous* is unset, *current* becomes *previous*, and the lock of the new *current* is set. This way, no thread can overtake another thread, keeping the integrity of the data structure. To avoid deadlock, the locks are always taken in the same order, i.e *previous* first, and then *current*. Both locks are released when exiting the function.
+ 
+```C
+typedef struct node {
+    int val;
+    struct node *next;
+    int to_remove;
+    omp_lock_t lock;
+} node_t;
+
+int insert(node_t *head, int val) {
+    node_t *previous, *current = NULL;
+    current = head;
+    omp_set_lock(&current->lock);
+
+    while (current && current->val < val) {
+        if (previous){
+            omp_unset_lock(&previous->lock);
+        }
+        previous = current;
+        current  = current->next;
+        omp_set_lock(&current->lock);
+    }
+
+    if (current && current->val == val) { // This value already exists!
+        omp_unset_lock(&previous->lock);
+        omp_unset_lock(&current->lock);
+        return -1;
+    }
+    
+    // Here is the right position to insert the new node.
+    node_t *new_node;
+    new_node = malloc(sizeof(node_t));
+    new_node->val = val;
+    new_node->next = current;
+    new_node->to_remove = 0;
+    omp_init_lock(&new_node->lock);
+
+    previous->next = new_node;
+    omp_unset_lock(&previous->lock);
+    omp_unset_lock(&current->lock);
+    return 0;
+}
+
+int delete(node_t *head, int val) {
+    node_t *previous, *current;
+
+    if (head->next == NULL) { // The list is empty.
+        return -1;
+    }
+
+    previous = head;
+    current = head->next;
+    omp_set_lock(&previous->lock);
+    omp_set_lock(&current->lock);
+    while (current) {
+        if (current->val == val) {
+            previous->next = current->next;
+            current->to_remove = 1; // Another system component will free this node later
+            omp_unset_lock(&previous->lock);
+            omp_unset_lock(&current->lock);
+            return val;
+        }
+        omp_unset_lock(&previous->lock);
+        previous = current;
+        current  = current->next;
+        omp_set_lock(&current->lock);
+
+    }
+    omp_unset_lock(&previous->lock);
+    omp_unset_lock(&current->lock);
+    return -1;
+}
+```
+## Performance bottleneck of item lock
+The implementation of item lock is faster than the single lock, as two threads can insert or delete at the same time, if they are not in the same place of the list. 
+A major set back still exists though. As a thread can not overtake another one, this thread can be blocked if the operation he has to do happens after the one already in position. For exemple, if the list consists of number from 1 to 100, Thread 1 with operations delete(99) will be blocked behind Thread 0 performing delete(10), even when they could delete both elements simultaneously
+
+## Lock free linked-list
