--- a/Assignement 3/a3_37.md
+++ b/Assignement 3/a3_37.md
@@ -182,3 +182,91 @@ The implementation of item lock is faster than the single lock, as two threads c
 A major set back still exists though. As a thread can not overtake another one, this thread can be blocked if the operation he has to do happens after the one already in position. For exemple, if the list consists of number from 1 to 100, Thread 1 with operations delete(99) will be blocked behind Thread 0 performing delete(10), even when they could delete both elements simultaneously
 
 ## Lock free linked-list
+As for the previous part, list item contains a lock that is initialized when the element is added. In this version, the thread is searching the place to add or delete without locking anything. When it arrives at the right place, it checks that the *previous->next == current* (i.e. that no other threads had inserted or removed an element just at the same time). It also checks that neither *previous* nor *current* are already locked. If the condition is *true*, it *atomically* lock *previous* and *current* for the *insert* case.  After that it adds the new node and releases *current* and *previous*. Concerning the *delete* case, after testing it everything is unchanged and unlocked, it atomically removes the node.
+
+```C
+typedef struct node {
+    int val;
+    struct node *next;
+    int to_remove;
+    omp_lock_t lock;
+} node_t;
+
+int insert(node_t *head, int val) {
+    node_t *previous, *current;
+    current = head;
+
+    while (current && current->val < val) {
+        previous = current;
+        current  = current->next;
+    }
+
+    if (current && current->val == val) { // This value already exists!
+        return -1;
+    }
+    
+    // Here is the right position to insert the new node.
+
+    
+    if(previous->next == current && !(current->lock) && !(previous->lock)){
+        #pragma omp atomic{
+            omp_set_lock(&current->lock);
+            omp_set_lock(&previous->lock);
+        }
+    } else {
+        insert(head, val);
+    }
+    
+    node_t *new_node;
+    new_node = malloc(sizeof(node_t));
+    new_node->val = val;
+    new_node->next = current;
+    new_node->to_remove = 0
+    omp_init_lock(new_node->lock)
+
+    previous->next = new_node;
+
+    omp_unset_lock(&current->lock);
+    omp_unset_lock(&previous->lock);
+    return 0;
+}
+
+int delete(node_t *head, int val) {
+    node_t *previous, *current;
+
+    if (head->next == NULL) { // The list is empty.
+        return -1;
+    }
+
+    previous = head;
+    current = head->next;
+    while (current) {
+        if (current->val == val) {
+            #pragma omp atomic{
+                previous->next = current->next;
+                current->to_remove = 1; // Another system component will free this node later
+            }
+            return val;
+        }
+
+        previous = current;
+        current  = current->next;
+    }
+    return -1;
+}
+
+int search(node_t *head, int val) {
+    node_t *current = head->next;
+
+    while (current) {
+        if (current->val == val) {
+            return 0;
+        }
+        current  = current->next;
+    }
+
+    return -1;
+}
+
+
+```
