--- a/Assignement 3/a3_37.md
+++ b/Assignement 3/a3_37.md
@@ -182,7 +182,7 @@ The implementation of item lock is faster than the single lock, as two threads c
 A major set back still exists though. As a thread can not overtake another one, this thread can be blocked if the operation he has to do happens after the one already in position. For exemple, if the list consists of number from 1 to 100, Thread 1 with operations delete(99) will be blocked behind Thread 0 performing delete(10), even when they could delete both elements simultaneously
 
 ## Lock free linked-list
-As for the previous part, list item contains a lock that is initialized when the element is added. In this version, the thread is searching the place to add or delete without locking anything. When it arrives at the right place, it checks that the *previous->next == current* (i.e. that no other threads had inserted or removed an element just at the same time). It also checks that neither *previous* nor *current* are already locked. If the condition is *true*, it *atomically* lock *previous* and *current* for the *insert* case.  After that it adds the new node and releases *current* and *previous*. Concerning the *delete* case, after testing it everything is unchanged and unlocked, it atomically removes the node.
+As for the previous part, list item contains a lock that is initialized when the element is added. In this version, the thread is searching the place to add or delete without locking anything. When it arrives at the right place, it checks that the *previous->next == current* (i.e. that no other threads had inserted or removed an element just at the same time). It also checks that neither *previous* nor *current* are already locked. If the condition is *true*, it *atomically* checks the condition again and then if lock *previous* and *current* for the *insert* case.  After that it adds the new node and releases *current* and *previous*. If the condition is false, it just call the *insert* method once again. Concerning the *delete* case, after testing that it everything is unchanged and unlocked, it atomically removes the node. 
 
 ```C
 typedef struct node {
@@ -210,8 +210,10 @@ int insert(node_t *head, int val) {
     
     if(previous->next == current && !(current->lock) && !(previous->lock)){
         #pragma omp atomic{
-            omp_set_lock(&current->lock);
-            omp_set_lock(&previous->lock);
+            if(previous->next == current && !(current->lock) && !(previous->lock)){
+                omp_set_lock(&current->lock);
+                omp_set_lock(&previous->lock);
+            }
         }
     } else {
         insert(head, val);
@@ -268,5 +270,10 @@ int search(node_t *head, int val) {
     return -1;
 }
 
-
 ```
+
+Data races :
+
+1. **Two threads try to write at the same place at the same time**
+    
+    The two thread can find the place at the same time, they can even execute the condition at the same time but only one can
