change report, just need the part of it is better to use 4 or 6 in some situations

--- a/Assignement 3/a3_37.md
+++ b/Assignement 3/a3_37.md
@@ -1,4 +1,5 @@
 # Assignment 3
+Simon Wicky and Samuel Chassot
 
 ## Data races
 
@@ -182,7 +183,7 @@ The implementation of item lock is faster than the single lock, as two threads c
 A major set back still exists though. As a thread can not overtake another one, this thread can be blocked if the operation he has to do happens after the one already in position. For exemple, if the list consists of number from 1 to 100, Thread 1 with operations delete(99) will be blocked behind Thread 0 performing delete(10), even when they could delete both elements simultaneously
 
 ## Lock free linked-list
-As for the previous part, list item contains a lock that is initialized when the element is added. In this version, the thread is searching the place to add or delete without locking anything. When it arrives at the right place, it checks that the *previous->next == current* (i.e. that no other threads had inserted or removed an element just at the same time). It also checks that neither *previous* nor *current* are already locked. If the condition is *true*, it *atomically* checks the condition again and then if lock *previous* and *current* for the *insert* case.  After that it adds the new node and releases *current* and *previous*. If the condition is false, it just call the *insert* method once again. Concerning the *delete* case, after testing that it everything is unchanged and unlocked, it atomically removes the node. 
+As for the previous part, list item contains a lock that is initialized when the element is added. In this version, the thread is searching the place to add or delete without locking anything. When it arrives at the right place, it locks *previous* and *current*. For the *insert* case, it checks if *previous->next* indeed equals *current* and if *previous* is not deleted (*to_remove*). If both checks pass that means it is actually a the right place and it performs the add and then releases both elements. If one condition is false, it releases both nodes and recall insert. Cooncerning *delete* function, if *current* equals *previous->next* like for *insert* and if it is ok, it removes and releases both nodes. If the condition fails, it just releases nodes and recall *delete*.
 
 ```C
 typedef struct node {
@@ -206,19 +207,16 @@ int insert(node_t *head, int val) {
     }
     
     // Here is the right position to insert the new node.
-
     
-    if(previous->next == current && !(current->lock) && !(previous->lock)){
-        #pragma omp atomic{
-            if(previous->next == current && !(current->lock) && !(previous->lock)){
-                omp_set_lock(&current->lock);
-                omp_set_lock(&previous->lock);
-            }
-        }
-    } else {
-        insert(head, val);
+    omp_set_lock(&current->lock);
+    omp_set_lock(&previous->lock);
+    
+    if(previous->to_remove || previous->next != current){
+        omp_unset_lock(&current->lock);
+        omp_unset_lock(&previous->lock);
+        return insert(head, val);
     }
-    
+
     node_t *new_node;
     new_node = malloc(sizeof(node_t));
     new_node->val = val;
@@ -244,10 +242,17 @@ int delete(node_t *head, int val) {
     current = head->next;
     while (current) {
         if (current->val == val) {
-            #pragma omp atomic{
-                previous->next = current->next;
-                current->to_remove = 1; // Another system component will free this node later
+            omp_set_lock(&current->lock);
+            omp_set_lock(&previous->lock);
+            if(previous->next != current || current->to_remove){
+                omp_unset_lock(&current->lock);
+                omp_unset_lock(&previous->lock);
+                return delete(head, val);
             }
+            previous->next = current->next;
+            current->to_remove = 1; // Another system component will free this node later
+            omp_unset_lock(&current->lock);
+            omp_unset_lock(&previous->lock);
             return val;
         }
 
@@ -256,6 +261,7 @@ int delete(node_t *head, int val) {
     }
     return -1;
 }
+
 
 int search(node_t *head, int val) {
     node_t *current = head->next;
@@ -274,6 +280,14 @@ int search(node_t *head, int val) {
 
 Data races :
 
-1. **Two threads try to write at the same place at the same time**
+* **Two threads try to write at the same place at the same time**
     
-    The two thread can find the place at the same time, they can even execute the condition at the same time but only one can
+    Only the first thread will be able to lock. When it will unlock nodes, the next thread will be able to lock them. If the first thread, modified something, the second thread will have a false to the condition so it will recall the function and do it again.
+
+* **One thread writes, one thread deletes** and **Two threads delete**
+
+    Same explanation as for two writes.
+
+
+## Is this solving question 5's problem ?
+Because the threads do not lock nodes when do the list traversal, they can overtake each other. To see that, let's take the list [1, 6, 10, 12] and say that thread 1 wants to add element 2 and thread 2 wants to delete element 12. T1 goes through the list and finds that it will insert it between 1 and 6. It locks these two nodes. T2 goes through the list and can pass over 1 and 6 because it does not want to lock them (this even if they are already locked by T1). This lets different threads work at different places of the list freely.
