--- a/Assignement 3/a3_37.md
+++ b/Assignement 3/a3_37.md
@@ -291,3 +291,6 @@ Data races :
 
 ## Is this solving question 5's problem ?
 Because the threads do not lock nodes when do the list traversal, they can overtake each other. To see that, let's take the list [1, 6, 10, 12] and say that thread 1 wants to add element 2 and thread 2 wants to delete element 12. T1 goes through the list and finds that it will insert it between 1 and 6. It locks these two nodes. T2 goes through the list and can pass over 1 and 6 because it does not want to lock them (this even if they are already locked by T1). This lets different threads work at different places of the list freely.
+
+## Situations where item locks is better
+It is better to lock element like done in question 4 where threads will do changes often at the same place. With the non-locking traversal version, threads will often have to retraverse from the begining. Instead with the locking version, they will have to wait behind the one that has the lock but when it has finished the next can immediatly perfom its action without having to traverse everything again after realizing that there was some changes done.
