modify typo and change some sentences

--- a/Assignement 3/a3_37.md
+++ b/Assignement 3/a3_37.md
@@ -183,7 +183,7 @@ The implementation of item lock is faster than the single lock, as two threads c
 A major set back still exists though. As a thread can not overtake another one, this thread can be blocked if the operation he has to do happens after the one already in position. For exemple, if the list consists of number from 1 to 100, Thread 1 with operations delete(99) will be blocked behind Thread 0 performing delete(10), even when they could delete both elements simultaneously
 
 ## Lock free linked-list
-As for the previous part, list item contains a lock that is initialized when the element is added. In this version, the thread is searching the place to add or delete without locking anything. When it arrives at the right place, it locks *previous* and *current*. For the *insert* case, it checks if *previous->next* indeed equals *current* and if *previous* is not deleted (*to_remove*). If both checks pass that means it is actually a the right place and it performs the add and then releases both elements. If one condition is false, it releases both nodes and recall insert. Cooncerning *delete* function, if *current* equals *previous->next* like for *insert* and if it is ok, it removes and releases both nodes. If the condition fails, it just releases nodes and recall *delete*.
+As for the previous part, list item contains a lock that is initialized when the element is added. In this version, the thread is searching the place to add or delete without locking anything. When it arrives at the right place, it locks *previous* and *current*. For the *insert* case, it checks if *previous->next* indeed equals *current* and if *previous* is not deleted (*to_remove*). If both checks pass, it means that it is indeed at the right place and so it performs the insert and then releases both elements. If one condition is false, it releases both nodes and recall insert. Concerning *delete* function, it checks if *current* equals *previous->next* (like for *insert*) and if it is the case, it removes and releases both nodes. If the condition fails, it just releases nodes and recall *delete*.
 
 ```C
 typedef struct node {
@@ -282,7 +282,7 @@ Data races :
 
 * **Two threads try to write at the same place at the same time**
     
-    Only the first thread will be able to lock. When it will unlock nodes, the next thread will be able to lock them. If the first thread, modified something, the second thread will have a false to the condition so it will recall the function and do it again.
+    Only the first thread will be able to lock. When it eventually unlock nodes, the next thread will be able to lock them. If the first thread, modified something, the second thread won't pass the conditions so it will recall the function and do it again.
 
 * **One thread writes, one thread deletes** and **Two threads delete**
 
