correct typo and add a part at the last explanation

--- a/Assignement 3/a3_37.md
+++ b/Assignement 3/a3_37.md
@@ -282,7 +282,7 @@ Data races :
 
 * **Two threads try to write at the same place at the same time**
     
-    Only the first thread will be able to lock. When it eventually unlock nodes, the next thread will be able to lock them. If the first thread, modified something, the second thread won't pass the conditions so it will recall the function and do it again.
+    Only the first thread will be able to lock. When it eventually unlock nodes, the next thread will be able to lock them. If the first thread modified something, the second thread won't pass the conditions so it will recall the function and do it again.
 
 * **One thread writes, one thread deletes** and **Two threads delete**
 
@@ -294,3 +294,5 @@ Because the threads do not lock nodes when do the list traversal, they can overt
 
 ## Situations where item locks is better
 It is better to lock element like done in question 4 where threads will do changes often at the same place. With the non-locking traversal version, threads will often have to retraverse from the begining. Instead with the locking version, they will have to wait behind the one that has the lock but when it has finished the next can immediatly perfom its action without having to traverse everything again after realizing that there was some changes done.
+
+If the list is big with few accesses (low probability of collisions that lead to races) the non-locking version is a better choice. By reducing the number of lock it saves ressources and leads to better performance. 
